# documatrix

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  SETUP.md  docker-compose.yml  pyproject.toml  test_accuracy_comparison.py  test_app.py  test_graph_viz.py  test_prompt_debug.py
src/contract_analyzer/: __init__.py  main.py
src/contract_analyzer/api/: __init__.py  app.py  routes.py
src/contract_analyzer/core/: __init__.py  config.py
src/contract_analyzer/models/: __init__.py  chat.py  knowledge_store.py
src/contract_analyzer/services/: __init__.py  chat_service.py  document_service.py  graph_service.py  graph_visualizer.py  graphrag_service.py  knowledge_store_service.py  llm_service.py  vector_store.py
src/contract_analyzer/ui/: __init__.py  app.py
