[project]
name = "contract-analyzer"
version = "0.1.0"
description = "GraphRAG-powered contract analysis chat application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "gradio>=4.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.0.20",
    "networkx>=3.2",
    "markitdown[all]>=0.0.1a2",
    "chromadb>=0.4.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "aiofiles>=23.0.0",
    "tiktoken>=0.5.0",
    "openai>=1.0.0",
    "matplotlib>=3.8.0",
    "plotly>=5.17.0",
    "pydot>=2.0.0",
]

[project.scripts]
contract-analyzer = "contract_analyzer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
